syntax = "proto3";

option go_package = "github.com/m4schini/trend-scratcher";

package scraper;

service Scraper {
  rpc Control(stream ControlRequest) returns (stream ControlResponse) {}
}

message ControlRequest {
oneof action {
CA_EmulateViewport emulateViewport = 1;
CA_Navigate navigate = 2;
CA_Sleep sleep = 3;
CA_Click click = 4;
CA_SendKeys sendKeys = 5;
CA_CaptureHtml captureHtml = 6;
CA_CaptureScreenshot captureScreenshot = 7;
CA_WaitVisible waitVisible = 8;
CA_ScrollBy scrollBy = 9;
}
}

message ControlResponse {
oneof payload {
  CA_CaptureScreenshot_Response screenshot = 1;
  CA_CaptureHtml_Response html = 2;
  CA_Error_Response error = 3;
}
}

message CA_EmulateViewport {
  int64 width = 1;
  int64 height = 2;
}

message CA_Navigate {
  string url = 1;
}

message CA_Sleep {
  int64 duration = 1;
}

message CA_Click {
  string selector = 1;
}

message CA_SendKeys {
  string selector = 1;
  string input = 2;
}

message CA_CaptureScreenshot {
}

message CA_CaptureScreenshot_Response {
  bytes img = 1;
}

message CA_CaptureHtml {
}

message CA_CaptureHtml_Response {
  string html = 1;
}

message CA_Error_Response {
  string error = 1;
}

message CA_WaitVisible {
  string selector = 1;
}

message CA_ScrollBy {
  int64 scrollBy = 1;
}